src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsT-dwF1000-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width { fixed 1000; }\n}"
expression: snapshot
---
initial configure:
size: 1280 × 720, bounds: 1280 × 720, states: [Fullscreen]

post-map configures:
size: 1000 × 0, bounds: 1280 × 720, states: []
size: 1000 × 0, bounds: 1280 × 720, states: [Activated]
